--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
 		"lint": "biome lint"
 	},
 	"dependencies": {
+		"@prisma/client": "^6.19.0",
+		"@supabase/supabase-js": "^2.81.1",
+		"@types/react-calendar-heatmap": "^1.9.0",
 		"@vercel/functions": "^3.1.4",
 		"@whop-apps/sdk": "^0.0.1-canary.117",
 		"@whop/react": "0.3.0",
 		"@whop/sdk": "^0.0.3",
+		"framer-motion": "^12.23.24",
 		"next": "16.0.0",
 		"react": "19.2.0",
+		"react-calendar-heatmap": "^1.10.0",
 		"react-dom": "19.2.0"
 	},
 	"devDependencies": {
@@ -25,6 +30,7 @@
 		"@types/react-dom": "19.2.2",
 		"@whop-apps/dev-proxy": "0.0.1-canary.117",
 		"dotenv-cli": "^10.0.0",
+		"prisma": "^6.19.0",
 		"tailwindcss": "^4.1.14",
 		"typescript": "^5.9.3"
 	},
