--- a/package.json
+++ b/package.json
@@ -25,14 +25,19 @@
 	"devDependencies": {
 		"@biomejs/biome": "2.2.6",
 		"@tailwindcss/postcss": "^4.1.14",
+		"@testing-library/jest-dom": "^6.9.1",
+		"@testing-library/react": "^16.3.0",
 		"@types/node": "^20.19.21",
 		"@types/react": "19.2.2",
 		"@types/react-dom": "19.2.2",
+		"@vitejs/plugin-react": "^5.1.1",
 		"@whop-apps/dev-proxy": "0.0.1-canary.117",
 		"dotenv-cli": "^10.0.0",
+		"jsdom": "^27.2.0",
 		"prisma": "^6.19.0",
 		"tailwindcss": "^4.1.14",
-		"typescript": "^5.9.3"
+		"typescript": "^5.9.3",
+		"vitest": "^4.0.9"
 	},
 	"packageManager": "pnpm@9.15.9+sha512.68046141893c66fad01c079231128e9afb89ef87e2691d69e4d40eee228988295fd4682181bae55b58418c3a253bde65a505ec7c5f9403ece5cc3cd37dcf2531",
 	"pnpm": {
