--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"lint": "biome lint"
 	},
 	"dependencies": {
+		"@gsap/react": "^2.1.2",
 		"@prisma/client": "^6.19.0",
 		"@supabase/supabase-js": "^2.81.1",
 		"@types/react-calendar-heatmap": "^1.9.0",
@@ -16,11 +17,15 @@
 		"@whop-apps/sdk": "^0.0.1-canary.117",
 		"@whop/react": "0.3.0",
 		"@whop/sdk": "^0.0.3",
+		"clsx": "^2.1.1",
 		"framer-motion": "^12.23.24",
+		"gsap": "^3.13.0",
+		"lucide-react": "^0.553.0",
 		"next": "16.0.0",
 		"react": "19.2.0",
 		"react-calendar-heatmap": "^1.10.0",
-		"react-dom": "19.2.0"
+		"react-dom": "19.2.0",
+		"tailwind-merge": "^3.4.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.2.6",
