--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "whop-nextjs-app-template",
 	"version": "0.2.0",
 	"private": true,
+    "packageManager": "npm@10",
 	"scripts": {
 		"dev": "whop-proxy --command=\"next dev --turbopack\"",
 		"build": "next build",
