--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 		"@vitejs/plugin-react": "^5.1.1",
 		"@whop-apps/dev-proxy": "0.0.1-canary.117",
 		"dotenv-cli": "^10.0.0",
-		"jsdom": "^27.2.0",
+		"jsdom": "^25.0.1",
 		"prisma": "^6.19.0",
 		"tailwindcss": "^4.1.14",
 		"typescript": "^5.9.3",
@@ -47,6 +47,7 @@
 	},
 	"overrides": {
 		"@types/react": "19.2.2",
-		"@types/react-dom": "19.2.2"
+		"@types/react-dom": "19.2.2",
+		"parse5": "^7.2.1"
 	}
 }
