--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "whop-nextjs-app-template",
 	"version": "0.2.0",
 	"private": true,
-    "packageManager": "npm@10",
+	"packageManager": "npm@10",
 	"scripts": {
 		"dev": "whop-proxy --command=\"next dev --turbopack\"",
 		"build": "next build",
@@ -13,6 +13,7 @@
 		"@gsap/react": "^2.1.2",
 		"@prisma/client": "^6.19.0",
 		"@supabase/supabase-js": "^2.81.1",
+		"@tanstack/react-query": "^5.90.10",
 		"@types/react-calendar-heatmap": "^1.9.0",
 		"@vercel/functions": "^3.1.4",
 		"@whop-apps/sdk": "^0.0.1-canary.117",
