added animation to activity cards

--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
 		"@whop/react": "0.3.0",
 		"@whop/sdk": "^0.0.3",
 		"clsx": "^2.1.1",
-		"framer-motion": "^12.23.24",
 		"gsap": "^3.13.0",
 		"lucide-react": "^0.553.0",
+		"motion": "^12.23.24",
 		"next": "16.0.0",
 		"react": "19.2.0",
 		"react-calendar-heatmap": "^1.10.0",
