Implemented API routes for the log flow

--- a/package.json
+++ b/package.json
@@ -7,19 +7,24 @@
 		"dev": "whop-proxy --command=\"next dev --turbopack\"",
 		"build": "next build",
 		"start": "next start",
-		"lint": "biome lint"
+		"lint": "biome lint",
+		"test": "vitest run",
+		"test:watch": "vitest",
+		"test:coverage": "vitest run --coverage"
 	},
 	"dependencies": {
 		"@gsap/react": "^2.1.2",
 		"@prisma/client": "^6.19.0",
 		"@supabase/supabase-js": "^2.81.1",
 		"@tanstack/react-query": "^5.90.10",
+		"@types/dompurify": "^3.0.5",
 		"@types/react-calendar-heatmap": "^1.9.0",
 		"@vercel/functions": "^3.1.4",
 		"@whop-apps/sdk": "^0.0.1-canary.117",
 		"@whop/react": "0.3.0",
 		"@whop/sdk": "^0.0.3",
 		"clsx": "^2.1.1",
+		"dompurify": "^3.3.0",
 		"gsap": "^3.13.0",
 		"lucide-react": "^0.553.0",
 		"motion": "^12.23.24",
@@ -34,6 +39,7 @@
 		"@tailwindcss/postcss": "^4.1.14",
 		"@testing-library/jest-dom": "^6.9.1",
 		"@testing-library/react": "^16.3.0",
+		"@types/jsdom": "^27.0.0",
 		"@types/node": "^20.19.21",
 		"@types/react": "19.2.2",
 		"@types/react-dom": "19.2.2",
