--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
 	"packageManager": "npm@10",
 	"scripts": {
 		"dev": "whop-proxy --command=\"next dev --turbopack\"",
-		"build": "next build",
+		"build": "prisma generate && next build",
 		"start": "next start",
 		"lint": "biome lint",
 		"test": "vitest run",
 		"test:watch": "vitest",
-		"test:coverage": "vitest run --coverage"
+		"test:coverage": "vitest run --coverage",
+		"postinstall": "prisma generate"
 	},
 	"dependencies": {
 		"@gsap/react": "^2.1.2",
