--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,4 @@
 {
-  "installCommand": "npm install"
+  "installCommand": "npm install",
+  "buildCommand": "prisma db push --accept-data-loss && npm run build"
 }
