--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
   "installCommand": "npm install",
-  "buildCommand": "prisma db push --accept-data-loss && npm run build"
+  "buildCommand": "npm run build"
 }
