Skip Prisma postinstall, run generate only in build

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,9 @@
 {
   "installCommand": "npm install",
-  "buildCommand": "npm run build"
+  "buildCommand": "npm run build",
+  "env": {
+    "PRISMA_CLI_BINARY_TARGETS": "rhel-openssl-3.0.x",
+    "PRISMA_ENGINES_CHECKSUM_IGNORE_MISSING": "1",
+    "PRISMA_SKIP_POSTINSTALL_GENERATE": "true"
+  }
 }
