--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"react": "19.2.0",
 		"react-calendar-heatmap": "^1.10.0",
 		"react-dom": "19.2.0",
+		"react-swipeable": "^7.0.2",
 		"tailwind-merge": "^3.4.0"
 	},
 	"devDependencies": {
