--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
 		"test": "vitest run",
 		"test:watch": "vitest",
 		"test:coverage": "vitest run --coverage",
-		"postinstall": "prisma generate"
+		"postinstall": "npx prisma generate"
 	},
 	"dependencies": {
 		"@gsap/react": "^2.1.2",
 		"@prisma/client": "^6.19.0",
+  "prisma":"^6.19.0",
 		"@supabase/supabase-js": "^2.81.1",
 		"@tanstack/react-query": "^5.90.10",
 		"@types/dompurify": "^3.0.5",
